syntax = "proto3";

option csharp_namespace = "Proto.Command.Tags";

service TagCommandService {
  rpc CreateTag (CreateTagCommandProto) returns (CommandResponse);
  rpc UpdateTag (UpdateTagCommandProto) returns (CommandResponse);
}

message CreateTagCommandProto {
  string tagId = 1;
  string name = 2;
}

message UpdateTagCommandProto {
  string tagId = 1;
  string name = 2;
}

message CommandResponse {
  bool success = 1;
}
