syntax = "proto3";

option csharp_namespace = "Proto.Requests.Tags";

package contract.requests;

message GetAllTagsRequestProto {}

message GetTagByIdRequestProto {
  string tag_id = 1;
}

message TagProto {
  string tag_id = 1;
  string name = 2;
  bool is_selected = 3;
}

message TagListProto {
  repeated TagProto tags = 1;
}

service TagRequestService {
  rpc GetAllTags(GetAllTagsRequestProto) returns (TagListProto);
  rpc GetTagById(GetTagByIdRequestProto) returns (TagProto);
}
